syntax = "proto3";

package link;
option go_package = "github.com/grpc-link-shortener/proto;gatewayapi";

import "proto/google/api/annotations.proto";

service LinkShortener {
    rpc CreateShortLink(CreateShortLinkRequest) returns (CreateShortLinkResponse) {
        option (google.api.http) = {
            post: "/"
            body: "*"
        };
    }

    rpc GetShortLink(GetShortLinkRequest) returns (GetShortLinkResponse) {
        option (google.api.http) = {
            get: "/{short_url}"
        };
    }

    rpc GetLinksList(GetLinksListRequest) returns (GetLinksListResponse) {
        option (google.api.http) = {
            get: "/"
        };
    }
}

message CreateShortLinkRequest{
    string full_url = 1;
}

message CreateShortLinkResponse{
    string full_url = 1;
    string short_url = 2;
    int32 visits_count = 3;
}

message GetShortLinkRequest {
    string short_url = 1;
}

message GetShortLinkResponse {
    string full_url = 1;
}

message GetLinksListRequest {}

message GetLinksListResponse {
    repeated Link result = 1;
}

message Link {
    string full_url = 1;
    string short_url = 2;
    int32 visits_count = 3;
}